package project.semicolon.ecommercebackend.Enums;

public enum Category {
    ELECTRONICS,
    FASHION,
    HOME,
    TOYS,
    BEAUTY,
    BOOKS,
    GROCERIES,
    OTHER
}
