package project.semicolon.ecommercebackend.Enums;

public enum Role {
    CUSTOMER,
    SELLER;

}
