package project.semicolon.ecommercebackend.dtos.Requests;

import lombok.Getter;
import lombok.Setter;
import project.semicolon.ecommercebackend.Enums.Role;

@Setter
@Getter

public class UserRequest {
    private String firstName;
    private String lastName;
    private String email;
    private Role role;
}
